fixing spacing

--- a/site.css
+++ b/site.css
@@ -29,12 +29,6 @@ footer a{
     color:white !important;
 }
 
-.images{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .hacker{
     float:left; 
     height: 300px;
